{
    "name": "playerController",
    "maps": [
        {
            "name": "keyboard",
            "id": "43ee5e64-4e2b-4f5e-918f-3b792f0bdd8d",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "0fd8d336-379a-412c-837a-e935f6bd82fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8c5cbbff-dc71-4cd7-abac-5e48a583c864",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "controller",
            "id": "c52ad786-443a-41d9-8c9f-03ee56fa13b9",
            "actions": [
                {
                    "name": "movement",
                    "type": "PassThrough",
                    "id": "3dbdb543-75ef-4414-b8f9-23b5ceca160c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "interact",
                    "type": "Button",
                    "id": "a4ef92f6-1ed0-463e-9f67-8898db1f67f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "attack1",
                    "type": "Button",
                    "id": "4704af23-c554-438e-a3b3-dcb204994a31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "attack2",
                    "type": "Button",
                    "id": "2a3ad70c-1a35-40b2-89b9-d4d5c680e85c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "attack3",
                    "type": "Button",
                    "id": "eb71bdbe-3c61-4bf9-8d45-236209bf4072",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "crouch",
                    "type": "Button",
                    "id": "07bcee4e-bf2a-42c0-b493-6f99a2e0a393",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "heavyAttack",
                    "type": "Value",
                    "id": "49b69718-c1ea-4d93-9d8c-58c5974ed64f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FruitSpawn",
                    "type": "Button",
                    "id": "47f82084-3376-4531-afbc-b14bec32f5f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fe6c87eb-b259-4e5a-8a6c-535c32c13022",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0609f1d0-a639-4ecf-a4b7-06998da8d922",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59f1477a-4b67-46e0-b288-796d5ddb6db9",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "attack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98a9e6b6-cf63-4467-bab9-1e6d29b141fe",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "attack2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2fdc11b-2b90-4524-abfa-68421e005f8f",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "attack3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4cd502b-835e-4bb3-bc33-0da0d4bc0fbe",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "208fbb25-b1e8-438d-84c2-9196bbb94e8b",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Hold(duration=0.3)",
                    "processors": "",
                    "groups": "",
                    "action": "heavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62016e48-e87e-4650-abc7-964de771f93a",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FruitSpawn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}